<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_default_fab"
        android:icon="@drawable/ic_default_fab"
        android:title="@string/title_default_fab" />

    <item
        android:id="@+id/navigation_custom_fab"
        android:icon="@drawable/ic_custom_fab"
        android:title="@string/title_custom_fab" />

    <item
        android:id="@+id/navigation_default_efab"
        android:icon="@drawable/ic_default_efab"
        android:title="@string/title_default_efab" />

    <item
        android:id="@+id/navigation_custom_efab"
        android:icon="@drawable/ic_custom_efab"
        android:title="@string/title_custom_efab" />

    <item
        android:id="@+id/navigation_bonus"
        android:icon="@drawable/ic_bonus"
        android:title="@string/title_bonus" />

</menu>
